--- a/Texter/Views/Home/SendMessage.cshtml
+++ b/Texter/Views/Home/SendMessage.cshtml
@@ -5,11 +5,13 @@
 @using (Html.BeginForm())
 {
     @Html.LabelFor(model => model.To)
-    @Html.TextBoxFor(model => model.To)
+    @Html.DropDownList("To")
+
     @Html.LabelFor(model => model.From)
     @Html.TextBoxFor(model => model.From)
     @Html.LabelFor(model => model.Body)
     @Html.TextBoxFor(model => model.Body)
+
     <input type="submit" value="Send!" />
 }
 
