Add the from nuber directly to the Send function

--- a/Texter/Views/Home/SendMessage.cshtml
+++ b/Texter/Views/Home/SendMessage.cshtml
@@ -7,8 +7,8 @@
     @Html.LabelFor(model => model.To)
     @Html.DropDownList("To")
 
-    @Html.LabelFor(model => model.From)
-    @Html.TextBoxFor(model => model.From)
+ <!--   @Html.LabelFor(model => model.From)
+    @Html.TextBoxFor(model => model.From)-->
     @Html.LabelFor(model => model.Body)
     @Html.TextBoxFor(model => model.Body)
 
