--- a/Texter/Views/Account/Register.cshtml
+++ b/Texter/Views/Account/Register.cshtml
@@ -3,7 +3,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-@using BasicAuthentication.ViewModels
+@using Texter.ViewModels
 
 @model RegisterViewModel
 
