--- a/Texter/Views/Home/Index.cshtml
+++ b/Texter/Views/Home/Index.cshtml
@@ -1,6 +1,9 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Index";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
+
+<!--@using System.Security.Claims-->
 
 <h2>Awesome Text Messaging App!</h2>
 <hr />
